# class-implements

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml  test-package.yml
src/class_implements/: __init__.py  implements.py
tests/: test_runtime.py
