[project]
name = "class-implements"
version = "0.0.0"
description = "Protocol utilities"
authors = [
    {name = "gekkotadev", email = "114091010+GekkotaDev@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "pytest>=8.2.0",
]
